[project]
name = "dag_tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "acryl-datahub[dagster]>=1.4.0.5",
    "boto3>=1.42.64",
    "dagster",
    "dagster-aws>=0.28.18",
    "dagster-cloud",
    "dagster-components>=0.1.0",
    "dagster-dbt>=0.28.18",
    "dagster-dlt>=0.28.18",
    "dagster-embedded-elt>=0.28.18",
    "dlt>=1.23.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "s3fs>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "dag_tools.definitions"
code_location_name = "dag_tools"

[tool.dagster.components]
register_components = ["dag_tools.components.dlt_pipeline", "dag_tools.components.dbt_project", "dag_tools.components.datahub_lineage"]
