[project]
name = "dag_tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "acryl-datahub>=1.4.0.5",
    "boto3>=1.34.0,<1.42.62",
    "dagster",
    "dagster-aws>=0.28.18",
    "dagster-cloud",
    "dagster-dbt>=0.28.18",
    "dagster-dlt>=0.28.18",
    "dagster-embedded-elt>=0.28.18",
    "dlt[postgres,snowflake,filesystem,clickhouse,databricks]>=1.23.0",
    "httpx>=0.28.1",
    "oracledb>=3.4.2",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pyodbc>=5.3.0",
    "requests>=2.32.5",
    "restate-sdk>=0.14.0,<0.15.0",
    "s3fs>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "dag_tools.definitions"
code_location_name = "dag_tools"

[tool.dagster.components]
register_components = ["dag_tools.components.dlt_pipeline", "dag_tools.components.dbt_project", "dag_tools.components.datahub_lineage", "dag_tools.components.s3_sensor", "dag_tools.components.restate_dlt_sync", "dag_tools.components.restate_api_sync"]

